# translate-app

./: CMakeLists.txt  main.cpp
desktop/: .gitignore  App.xaml  App.xaml.cpp  App.xaml.h  MainWindow.idl  MainWindow.xaml  MainWindow.xaml.cpp  MainWindow.xaml.h  Package.appxmanifest  app.manifest  client.h  desktop.slnx  desktop.vcxproj  desktop.vcxproj.filters  gpu_monitor.cpp  gpu_monitor.h  pch.h  readme.txt
engine/: translate_engine.cpp  translate_engine.h
proto/: translate.grpc.pb.cc  translate.grpc.pb.h  translate.pb.cc  translate.pb.h  translate.proto
proto/proto/: translate.grpc.pb.cc  translate.pb.h
server/: log_queue.h  main.cpp  stderr_capturer.h  translate.grpc.pb.cc  translate.grpc.pb.h  translate.pb.cc  translate.pb.h  translate.proto  translate_server.h
